# harnesskit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/memory/: MEMORY.md  proactive_ci_verification.md  template_consistency.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 000-template.md  001-template-engine.md
docs/specs/: 2026-04-12-harnesskit-design.md  2026-04-12-harnesskit-phase1-plan.md
scripts/: harness-check.sh  publish.sh
src/harnesskit/: __init__.py  __main__.py  cli.py  config.py  generator.py  prompts.py
src/harnesskit/templates/addons/docker/: docker-compose.yml.j2
src/harnesskit/templates/base/: .gitignore.j2  AGENTS.md.j2  CLAUDE.md.j2  LICENSE.j2  Makefile.j2  README.md.j2  commitlint.config.js.j2
src/harnesskit/templates/base/docs/: architecture.md.j2
src/harnesskit/templates/base/scripts/: harness-check.sh.j2
src/harnesskit/templates/python/_shared/: .pre-commit-config.yaml.j2  pyproject.toml.j2
src/harnesskit/templates/python/microservice/: Dockerfile.j2
src/harnesskit/templates/python/web_app/: Dockerfile.j2
src/harnesskit/templates/typescript/_shared/: .pre-commit-config.yaml.j2  biome.json.j2  package.json.j2  (+1 more)
tests/: conftest.py  test_addons.py  test_cli.py  test_config.py  test_generator.py  test_integration.py  test_prompts.py
tests/test_templates/: test_python_cli_tool.py  test_python_library.py  test_python_microservice.py  test_python_web_app.py  test_ts_cli_tool.py  test_ts_library.py  test_ts_microservice.py  test_ts_web_app.py
(+69 files in other folders)
