[project]
name = "harnesskit"
version = "0.1.0"
description = "AI Native Repository Generator"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "stayrascal" }]
dependencies = [
    "click>=8.1",
    "questionary>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
harnesskit = "harnesskit.cli:main"
hk = "harnesskit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "twine>=5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/harnesskit"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://upload.test.pypi.org/legacy/"
